kubernetes/apps/home-automation/music-assistant-server/app/ingress-alexa-stream.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-assistant-alexa-stream
  namespace: home-automation
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: external
  rules:
    - host: "music-stream.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: music-assistant-server
                port:
                  number: 8097
